# amazon-timestream-tools

./: .gitignore  README.md
.github/workflows/: codeql-analysis.yml  influx-migration-tests-linux.yml  main.yml
integrations/: README.md
integrations/eventbridge_pipes/: README.md  template.yaml
integrations/flink_connector/: .gitignore  README.md  THIRD-PARTY-LICENSES.txt  pom.xml
integrations/flink_connector_with_upserts/: pom.xml
integrations/iot_core/: README.md  cfn-iot-rule-to-timestream.json  inline-policy.json  iot-trust-policy.json  sensordata.py  to-timestream-rule-template.json
integrations/jdbc/: pom.xml
integrations/kafka_connector/: README.md  pom.xml
integrations/pandas/: 1-writing-and-querying-basics.ipynb  2-writing-and-querying-advanced.ipynb  README.md
integrations/sagemaker/: README.md  Timestream_SageMaker_Demo.ipynb  timestreamquery.py  timestreamquery_test.py
integrations/telegraf/: README.md
sample_apps/: README.md
sample_apps/data/: README.md  sample_unload.csv
sample_apps/dotnet/: CompositePartitionKeyExample.cs  CrudAndSimpleIngestionExample.cs  CsvIngestionExample.cs  Program.cs  QueryExample.cs  README.md  TimestreamDependencyHelper.cs  TimestreamDotNetSample.csproj  TimestreamDotNetSample.sln  UnloadExample.cs  UnloadUtil.cs
sample_apps/rust/: Cargo.toml  README.md
sample_apps/rust/examples/: cleanup_sample.rs  ingestion_csv_sample.rs  query_sample.rs
sample_apps/rust/src/: utils.rs
sample_apps/rust/src/utils/: query_common.rs  timestream_helper.rs
sample_apps_reinvent2021/: README.md
tools/: README.md
(+396 files in other folders)
